src/core/config/transformer/snapshots/tailcall__core__config__transformer__flatten__test__flatten_complex.snap
---
source: src/core/config/transformer/flatten.rs
expression: transformed.to_sdl()
---
schema @server @upstream {
  query: Query
}

type Query {
  bar: Int
  foo: Int
}
